--- a/package.json
+++ b/package.json
@@ -18,7 +18,18 @@
     "@angular/forms": "~11.0.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
+    "@angular/router": "11.0.2",
+    "@angular/pwa": "0.1100.1",
+    "@angular/service-worker": "11.0.1",
+    "@ng-bootstrap/ng-bootstrap": "7.0.0",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/effects": "10.0.1",
+    "@ngrx/router-store": "10.0.1",
+    "@ngrx/store": "10.0.1",
+    "@ngrx/store-devtools": "10.0.1",
+    "@ngx-translate/core": "13.0.0",
+    "bootstrap": "4.5.3",
+    "core-js": "3.6.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -30,8 +41,10 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "http-server": "0.12.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "json-server": "^0.16.3",
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
