--- a/angular.json
+++ b/angular.json
@@ -7,6 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
+          "inlineStyle": true,
           "style": "scss"
         }
       },
@@ -17,7 +18,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-project-demo",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -29,6 +30,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -44,6 +46,7 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
+              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -53,11 +56,6 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
                 }
               ],
               "serviceWorker": true,
@@ -106,22 +104,37 @@
             "tsConfig": [
               "tsconfig.app.json",
               "tsconfig.spec.json",
-              "e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
           }
         },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-project-demo:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "angular-project-demo:serve:production"
+        "angular-project-demo-e2e":{
+          "root": "e2e/",
+          "projectType": "application",
+          "prefix": "",
+          "architect":{
+            "e2e": {
+              "builder": "@angular-devkit/build-angular:protractor",
+              "options": {
+                "protractorConfig": "e2e/protractor.conf.js",
+                "devServerTarget": "angular-workshop:serve"
+              },
+              "configurations": {
+                "production": {
+                  "devServerTarget": "angular-workshop:serve:production"
+                }
+              }
+            },
+            "lint":{
+              "builder": "@angular-devkit/build-angular:tslint",
+              "options":{
+                "tsConfig": "e2e/tsconfig.e2e.json",
+                "exclude":[
+                  "**/node_modules/**"
+                ]
+              }
             }
           }
         }
