--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --aot --proxy-config proxy.conf.js",
+    "serve:sw": "npm run build:prod && npx http-server ./dist -p 4200",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:prod": "ng build --prod --build-optimizer --vendor-chunk"
   },
   "private": true,
   "dependencies": {
